--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,35 @@ set(LVK_WITH_TRACY_GPU OFF CACHE BOOL "Disable Tracy GPU profiler")
 
 add_subdirectory(${LIGHTWEIGHTVK_SOURCE_DIR})
 
+# Assimp setup - use cookbook approach
+set(ASSIMP_NO_EXPORT ON CACHE BOOL "")
+set(ASSIMP_BUILD_DRACO OFF CACHE BOOL "")
+set(ASSIMP_BUILD_ASSIMP_TOOLS OFF CACHE BOOL "")
+set(ASSIMP_BUILD_TESTS OFF CACHE BOOL "")
+set(ASSIMP_INSTALL_PDB OFF CACHE BOOL "")
+set(ASSIMP_BUILD_ALL_IMPORTERS_BY_DEFAULT OFF CACHE BOOL "")
+set(ASSIMP_BUILD_OBJ_IMPORTER ON CACHE BOOL "")
+set(ASSIMP_BUILD_GLTF_IMPORTER ON CACHE BOOL "")
+set(ASSIMP_BUILD_ZLIB ON CACHE BOOL "")
+
+add_subdirectory(deps/src/assimp)
+if(APPLE)
+  target_compile_options(assimp PRIVATE -Wno-deprecated-declarations)
+endif()
+
+# Set folder property for assimp
+set_property(TARGET assimp PROPERTY FOLDER "third-party")
+
+# Disable warnings in third-party code
+if(MSVC)
+    target_compile_options(assimp PRIVATE /wd4267)
+else()
+    # Only apply to C++ files, not C files
+    target_compile_options(assimp PRIVATE 
+        $<$<COMPILE_LANGUAGE:CXX>:-Wno-dangling-reference>
+    )
+endif()
+
 # Main engine sources
 file(GLOB_RECURSE EngineSources CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp"
@@ -40,39 +69,37 @@ file(GLOB_RECURSE EngineSources CONFIGURE_DEPENDS
 # Create the main executable
 add_executable(VulkanEngine ${EngineSources} src/main.cpp)
 
-# Link libraries
+# Link libraries - use the same approach as cookbook
 target_link_libraries(VulkanEngine PRIVATE 
     glm::glm
     glfw 
     Vulkan::Vulkan 
     spdlog::spdlog 
     yaml-cpp
+    assimp
     LVKLibrary
-    minilog
+    LVKVulkan
 )
 
 # Compile definitions
 target_compile_definitions(VulkanEngine PRIVATE 
     TINYOBJLOADER_IMPLEMENTATION
     STB_IMAGE_IMPLEMENTATION
-    CGLTF_IMPLEMENTATION
 )
-
-# Use LightweightVK's ImGui instead of our own to avoid version conflicts
 
 # Include directories
 target_include_directories(VulkanEngine PRIVATE 
     "src"
     "deps/src/tiny_obj_loader"
     "deps/src/stb"
-    "deps/src/cgltf"
     "deps/src/yaml-cpp/include"
-    "deps/src/minilog"
     ${LIGHTWEIGHTVK_SOURCE_DIR}/include
 )
 
 # Compile features
 target_compile_features(VulkanEngine PRIVATE cxx_std_20)
+
+# Use LightweightVK's ImGui instead of our own to avoid version conflicts
 
 # Precompiled headers
 #target_precompile_headers(VulkanEngine PRIVATE "src/precomp.h")
